Use control clip rather than overflow clip when present for PaintLayers.

BUG=682574
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2645963003
Cr-Commit-Position: refs/heads/master@{#445182}

Former-commit-id: b281bde16d4878454ed00e1335c80100c414a920